# AccountApp

./: .gitignore  README.md
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/controllers/: exchange_rates.py  payments.py  references.py  router.py
backend/app/core/: settings.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  accounting.py  banking.py  base.py  enums.py  reference.py
backend/app/schemas/: exchange_rates.py  payments.py  reference.py
backend/app/services/: exchange_rates.py  payments.py  reference.py
backend/scripts/: migrate_exchange_rates_constraints.py  migrate_payment_attachments_multi.py  sync_cbr_rates.py
docs/: architecture.md
frontend/src/: App.jsx  index.css
frontend/src/components/LookupField/: LookupField.css  LookupField.jsx
frontend/src/components/Navbar/: Navbar.css  Navbar.jsx
frontend/src/lib/: api.js
frontend/src/pages/Banks/: BankAccountCreatePage.css  BankAccountCreatePage.jsx  BanksPage.css  BanksPage.jsx
frontend/src/pages/Clients/: ClientCreatePage.css  ClientCreatePage.jsx  ClientsPage.css  ClientsPage.jsx
frontend/src/pages/Companies/: CompaniesPage.css  CompaniesPage.jsx  CompanyCreatePage.css  CompanyCreatePage.jsx
frontend/src/pages/Counterparties/: CounterpartiesPage.css  CounterpartiesPage.jsx  CounterpartyCreatePage.css  CounterpartyCreatePage.jsx
frontend/src/pages/Payments/: AddPaymentsPage.css  AddPaymentsPage.jsx  PaymentsPage.css  PaymentsPage.jsx  paymentUtils.js
