[project]
name = "accounting-backend"
version = "0.1.0"
description = "FastAPI backend for the accounting application"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
